clean up for validator

--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="assets/logo.png" id="logo">
-                <img src="assets/logo-dark.png" id="logo-dark">
-                <figcaption>Allen Ship Center</figcaption>
+                <img src="assets/logo.png" alt="Allen Ship Center's logo" id="logo">
+                <img src="assets/logo-dark.png" alt="Allen Ship Center's logo" id="logo-dark"><br>
+                Allen Ship Center
             </a>
         </div>
         <nav>
@@ -46,25 +46,25 @@
     </header>
     <main>
          <div id="about-us-intro">
-            <img src="assets\about\group.jpg" alt="Employee Group Photo">
+            <img src="assets/about/group.jpg" alt="Employee Group Photo">
             <div>
                 <h1>About Us</h1>
                 <p>
                     <br>Allen Ship Center was founded in June of 2010 by Jerry Maylor. Headquartered in Allen Texas, Allen Ship Center is a premier and distinguished expert in 
                     international shipping. Since our founding we strive to serve residential and business customers in every sector. From the auto industry, furniture businesses, 
                     clothing lines, heavy machinery manufactures, telecommunications industry, science centers, and every small business or personal shipper in between. We cover 
-                    it all!</br>
+                    it all!<br>
                     <br>With partnerships with every major shipping provider from small parcel to full truck load (FTL) we can provide your company with the most efficient 
-                    shipping support to over 120,000 destinations worldwide, all at an amazing discount!</br>
+                    shipping support to over 120,000 destinations worldwide, all at an amazing discount!<br>
                     <br>We offer intelligent supply chain solutions, discounted shipping rates, and unmatched customer support with no minimum volume requirements. We are so 
-                    certain that you’ll love our service we allow you to ship at discounted rates without an account!</br>
+                    certain that you’ll love our service we allow you to ship at discounted rates without an account!<br>
                 </p>
             </div>
         </div>
         <h1 id="staff">Honored Staff</h1>
         <section class="cards">
-            <div class="card" class="col-1">
-                <img src="assets\about\employee-1.jpg" alt="Jerry Maylor">
+            <div class="card">
+                <img src="assets/about/employee-1.jpg" alt="Jerry Maylor">
                 <div class="container">
                   <h3><b>Jerry Maylor</b></h3>
                   <p>Founder</p>
@@ -76,8 +76,8 @@
                 he is determined to change that trend. Even after the company's establishment over ten years ago, Jerry is still heavily involved with the staff on location and is an essential 
                 leader over the team.
             </p>
-            <div class="card" class="col-1">
-                <img src="assets\about\employee-2.png" alt="Hollie Ellis">
+            <div class="card">
+                <img src="assets/about/employee-2.png" alt="Hollie Ellis">
                 <div class="container">
                   <h3><b>Hollie Ellis</b></h3>
                   <p>Manager</p>
@@ -87,8 +87,8 @@
                 Hollie has served as manager over Allen Ship Center's chain for well over four years which is longer than any other manager. She is essential in keeping staff 
                 motivated, welcomed, and focused; maintaining the location, and making important decisions that have brought Allen Ship Center further success. 
             </p>
-            <div class="card" class="col-1">
-                <img src="assets\about\employee-3.png" alt="Tamara Harmony">
+            <div class="card">
+                <img src="assets/about/employee-3.png" alt="Tamara Harmony">
                 <div class="container">
                   <h3><b>Tamara Harmony</b></h3>
                   <p>Customer Support</p>
