--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="assets/logo.png" id="logo">
-                <img src="assets/logo-dark.png" id="logo-dark">
-                <figcaption>Allen Ship Center</figcaption>
+                <img src="assets/logo.png" alt="Allen Ship Center's logo" id="logo">
+                <img src="assets/logo-dark.png" alt="Allen Ship Center's logo" id="logo-dark"><br>
+                Allen Ship Center
             </a>
         </div>
         <nav>
@@ -50,14 +50,14 @@
                 <h1>Welcome!</h1>
                 <p>
                     <br>Thank you for stopping by the Allen Ship Center website today! Here you’ll find all of the 
-                    information about what we do, how we do it, and how we can help make your shipping experience optimal.</br>
+                    information about what we do, how we do it, and how we can help make your shipping experience optimal.<br>
                     <br>We are a small business that specializes in an excellent shipping experience in Allen, TX. Quality 
                     shipping services here in Allen can be difficult, frustrating, or generally unpleasant to find – so it’s 
                     a good thing you found us! We are all about making your day easier and better. Please take a look some of 
-                    our most popular services below. Need more help? <a href="contact-us.html">Contact us</a>.</br>
+                    our most popular services below. Need more help? <a href="contact-us.html">Contact us</a>.<br>
                     <br>We truly are your one-stop-shop for all your shipping needs. If you would like to see our full range 
                     of services our Shipping Page and Services Page have all the details. If you still can't find what your 
-                    looking for you can <a href="contact-us.html">Contact us</a> any time!</br>
+                    looking for you can <a href="contact-us.html">Contact us</a> any time!<br>
                 </p>
             </div>
             <div>
