--- a/style-guide.html
+++ b/style-guide.html
@@ -18,9 +18,9 @@
         <header>
             <div id="logo-wrapper">
                 <a href="index.html">
-                    <img src="assets/logo.png" id="logo">
-                    <img src="assets/logo-dark.png" id="logo-dark">
-                    <figcaption>Allen Ship Center</figcaption>
+                    <img src="assets/logo.png" alt="Allen Ship Center's logo" id="logo">
+                    <img src="assets/logo-dark.png" alt="Allen Ship Center's logo" id="logo-dark"><br>
+                    Allen Ship Center
                 </a>
             </div>
             <nav>
@@ -183,50 +183,48 @@
             </div>
             <div>
                 <h2>Persona and Scenario Ideas</h2>
-                <ol>
-                    <li>Persona 1</li>
-                    <ul>
-                        <li>
-                        Name = Robert
-                        </li>
-                        <li>
-                        Age = 19
-                        </li>
-                        <li>
-                        Gender = Male
-                        </li>
-                        <li>
-                        Motivations = Desires connection with his family and friends during COVID-19.
-                        </li>
-                        <li>
-                        Goals = Learn how to make shipments for the first time.
-                        </li>
-                        <li>
-                        Technical Abilities = Due to age, proficient enough at using technology.
-                        </li>
-                    </ul>
-                    <li>Persona 2</li>
-                    <ul>
-                        <li>
-                            Name = Elizabeth
-                        </li>
-                        <li>
-                            Age = 64
-                        </li>
-                        <li>
-                            Gender = Female
-                        </li>
-                        <li>
-                            Motivations = Desires connection with her family and friends while living alone.
-                        </li>
-                        <li>
-                            Goals = Become familiar with modern shipping procedures to make shipments.
-                        </li>
-                        <li>
-                            Technical Abilities = Less proficient with technology because of age.
-                        </li>
-                    </ul>
-                </ol>
+                <h3>Persona 1</h3>
+                <ul>
+                    <li>
+                    Name = Robert
+                    </li>
+                    <li>
+                    Age = 19
+                    </li>
+                    <li>
+                    Gender = Male
+                    </li>
+                    <li>
+                    Motivations = Desires connection with his family and friends during COVID-19.
+                    </li>
+                    <li>
+                    Goals = Learn how to make shipments for the first time.
+                    </li>
+                    <li>
+                    Technical Abilities = Due to age, proficient enough at using technology.
+                    </li>
+                </ul>
+                <h3>Persona 2</h3>
+                <ul>
+                    <li>
+                        Name = Elizabeth
+                    </li>
+                    <li>
+                        Age = 64
+                    </li>
+                    <li>
+                        Gender = Female
+                    </li>
+                    <li>
+                        Motivations = Desires connection with her family and friends while living alone.
+                    </li>
+                    <li>
+                        Goals = Become familiar with modern shipping procedures to make shipments.
+                    </li>
+                    <li>
+                        Technical Abilities = Less proficient with technology because of age.
+                    </li>
+                </ul>
             </div>
         </section>
         <footer>
