--- a/subpage-1.html
+++ b/subpage-1.html
@@ -14,9 +14,9 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="assets/logo.png" id="logo">
-                <img src="assets/logo-dark.png" id="logo-dark">
-                <figcaption>Allen Ship Center</figcaption>
+                <img src="assets/logo.png" alt="Allen Ship Center's logo" id="logo">
+                <img src="assets/logo-dark.png" alt="Allen Ship Center's logo" id="logo-dark"><br>
+                Allen Ship Center
             </a>
         </div>
         <nav>
@@ -62,25 +62,29 @@
                     </ul>
                 </div>
                 <div class="right-column">
-                    <img src="assets\subpage-1\stamps.jpg" alt="Stamps">
+                    <img src="assets/subpage-1/stamps.jpg" alt="Stamps">
                 </div>
                 <div class="left-column">
-                    <img src="assets\subpage-1\fax.jpeg" alt="Fax machine">
+                    <img src="assets/subpage-1/fax.jpeg" alt="Fax machine">
                 </div>
                 <div class="right-column">
-                    <li>
-                        <span class="title">Do It For You Service:</span><br> Nothing is more annoying than pushing a button you think will fax your letter, and making a copy of 
-                        it instead. Don’t worry – we’ll get it done for you. And we’ll give you a confirmation notice, too.
-                    </li>
+                    <ul>
+                        <li>
+                            <span class="title">Do It For You Service:</span><br> Nothing is more annoying than pushing a button you think will fax your letter, and making a copy of 
+                            it instead. Don’t worry – we’ll get it done for you. And we’ll give you a confirmation notice, too.
+                        </li>
+                    </ul>
                 </div>
                 <div class="left-column">
-                    <li>
-                        <span class="title">Receive It For You:</span><br> You can count on us to not only send faxes, but to get them for you as well. We can also print things 
-                        off of email and hold them for you at special request.
-                    </li>
+                    <ul>
+                        <li>
+                            <span class="title">Receive It For You:</span><br> You can count on us to not only send faxes, but to get them for you as well. We can also print things 
+                            off of email and hold them for you at special request.
+                        </li>
+                    </ul>
                 </div>
                 <div class="right-column">
-                    <img src="assets\subpage-1\mailboxes.jpg" alt="Mailboxes">
+                    <img src="assets/subpage-1/mailboxes.jpg" alt="Mailboxes">
                 </div>
             </div>
             <div>
@@ -128,10 +132,10 @@
             <div>
                 <p>
                 <br>We have a pack-it-yourself station that has free shipping supplies for your needs. Stickers, tape, pens and pencils – all right there at your disposal. 
-                Best of all, we aren’t going to nickle and dime you for it. Just come on in and use as much as you need.</br>
+                Best of all, we aren’t going to nickle and dime you for it. Just come on in and use as much as you need.<br>
                 <br>If packing shipments isn't your thing we have you covered! Your great-great grandmother’s beloved rocking chair is going to the next relative in the line. 
                 You want to ship your son your famous meat pie and cake for his birthday, but it needs to stay frozen. You want to send an iPad to your pappy for Christmas 
-                in the UK. No matter what unique situation you have we'll take care of it.</br>
+                in the UK. No matter what unique situation you have we'll take care of it.<br>
                 </p>
             </div>
         </section>
