--- a/subpage-2.html
+++ b/subpage-2.html
@@ -14,9 +14,9 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="assets/logo.png" id="logo">
-                <img src="assets/logo-dark.png" id="logo-dark">
-                <figcaption>Allen Ship Center</figcaption>
+                <img src="assets/logo.png" alt="Allen Ship Center's logo" id="logo">
+                <img src="assets/logo-dark.png" alt="Allen Ship Center's logo" id="logo-dark"><br>
+                Allen Ship Center
             </a>
         </div>
         <nav>
@@ -59,7 +59,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="assets\subpage-2\kitty-bunny-designs.jpg" alt="Kitty Bunny Designs by Rachel and Scott Johnstone">
+                    <img src="assets/subpage-2/kitty-bunny-designs.jpg" alt="Kitty Bunny Designs by Rachel and Scott Johnstone">
                     <label>Owned by Rachel and Scott Johnstone</label>
                 </div>
                 <div>
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="assets\subpage-2\ginger-felicity.jpg" alt="Ginger Felicity by Lillian Bree">
+                    <img src="assets/subpage-2/ginger-felicity.jpg" alt="Ginger Felicity by Lillian Bree">
                     <label>Owned by Lillian Bree</label>
                 </div>
                 <div>
@@ -82,7 +82,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="assets\subpage-2\horse-of-color.jpg" alt="Horse of Color by Edwin Verity">
+                    <img src="assets/subpage-2/horse-of-color.jpg" alt="Horse of Color by Edwin Verity">
                     <label>Owned by Edwin Verity</label>
                 </div>
             </div>
