--- a/wireframes.html
+++ b/wireframes.html
@@ -15,9 +15,9 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="assets/logo.png" id="logo">
-                <img src="assets/logo-dark.png" id="logo-dark">
-                <figcaption>Allen Ship Center</figcaption>
+                <img src="assets/logo.png" alt="Allen Ship Center's logo" id="logo">
+                <img src="assets/logo-dark.png" alt="Allen Ship Center's logo" id="logo-dark"><br>
+                Allen Ship Center
             </a>
         </div>
         <nav>
@@ -51,39 +51,39 @@
                     <h1>Wireframes</h1>
                 </div>
                 <div class="wireframe">
-                    <a href="assets\wireframes\Home Page.png" target="_blank">
-                        <img src="assets\wireframes\Home Page.png" width="380" height="460" alt="Wireframe for Home page"></br>
-                        <label>Home Page</label></br>
+                    <a href="assets/wireframes/Home-Page.png" target="_blank">
+                        <img src="assets/wireframes/Home-Page.png" width="380" height="460" alt="Wireframe for Home page"><br>
+                        Home Page<br>
                     </a>
                 </div>
                 <div class="wireframe">
-                    <a href="assets\wireframes\Contact Us.png" target="_blank">
-                        <img src="assets\wireframes\Contact Us.png" alt="Wireframe for Contact Us page"></br>
-                        <label>Contact Us Page</label></br>
+                    <a href="assets/wireframes/Contact-Us.png" target="_blank">
+                        <img src="assets/wireframes/Contact-Us.png" alt="Wireframe for Contact Us page"><br>
+                        Contact Us Page<br>
                     </a>
                 </div>
                 <div class="wireframe">
-                    <a href="assets\wireframes\About Us.png" target="_blank">
-                        <img src="assets\wireframes\About Us.png" alt="Wireframe for About Us page"></br>
-                        <label>About Us Page</label></br>
+                    <a href="assets/wireframes/About-Us.png" target="_blank">
+                        <img src="assets/wireframes/About-Us.png" alt="Wireframe for About Us page"><br>
+                        About Us Page<br>
                     </a>
                 </div>
                 <div class="wireframe">
-                    <a href="assets\wireframes\Services.png" target="_blank">
-                        <img src="assets\wireframes\Services.png" alt="Wireframe for Services page"></br>
-                        <label>Services Page</label></br>
+                    <a href="assets/wireframes/Services.png" target="_blank">
+                        <img src="assets/wireframes/Services.png" alt="Wireframe for Services page"><br>
+                        Services Page<br>
                     </a>
                 </div>
                 <div class="wireframe">
-                    <a href="assets\wireframes\Local Gifts.png" target="_blank">
-                        <img src="assets\wireframes\Local Gifts.png" alt="Wireframe for Local Gifts page"></br>
-                        <label>Local Gifts Page</label></br>
+                    <a href="assets/wireframes/Local-Gifts.png" target="_blank">
+                        <img src="assets/wireframes/Local-Gifts.png" alt="Wireframe for Local Gifts page"><br>
+                        Local Gifts Page<br>
                     </a>
                 </div>
                 <div class="wireframe">
-                    <a href="assets\wireframes\Wireframes.png" target="_blank">
-                        <img src="assets\wireframes\Wireframes.png" alt="Wireframe for Wireframes page"></br>
-                        <label>Wireframes Page</label></br>
+                    <a href="assets/wireframes/Wireframes.png" target="_blank">
+                        <img src="assets/wireframes/Wireframes.png" alt="Wireframe for Wireframes page"><br>
+                        Wireframes Page<br>
                     </a>
                 </div>
 <!-- 
