added meta tags

--- a/style-guide.html
+++ b/style-guide.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Christopher Keers">
+        <meta name="author" content="Christopher Keers, Ryan Funk">
         <meta name="keywords" content="Site, Planning, Style, Guide, WDD 130, Web Fundamentals, Courses, Material, Projects, Assignments, CIT, BYUI">
-        <meta name="description" content="This is a homework assignment for WDD 130.">
+        <meta name="description" content="This is a homework assignment for WDD 130 and a webpage for Ryan's final project site.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Style Guide</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
