--- a/subpage-1.html
+++ b/subpage-1.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Ryan Funk, Allen Ship content from Christopher Keers">
+    <meta name="keywords" content="Subpage, Services, Page, WDD 130, Web Fundamentals, Courses, Material, Projects, Assignments, CIT, BYUI">
+    <meta name="description" content="This is a webpage for Ryan's final project site.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
